--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "mongoose": "^6.9.0",
+    "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
     "validator": "^13.7.0"
   }
