--- a/config.env
+++ b/config.env
@@ -1,1 +1,1 @@
-MONGODB_URL=mongodb+srv://goelakanksha7379:Abcd0987..@cluster0.uth7opf.mongodb.net/test
+MONGODB_URL=mongodb+srv://goelakanksha7379:**********@cluster0.uth7opf.mongodb.net/test
